--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -33,6 +33,12 @@
           },
           "configurations": {
             "production": {
+              "fileReplacements": [
+                {
+                  "replace": "src/app/config.ts",
+                  "with": "src/app/config.prod.ts"
+                }
+              ],
               "budgets": [
                 {
                   "type": "initial",
