--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@tailwindcss/typography": "^0.5.13",
+    "github-markdown-css": "^5.6.1",
     "marked": "^12.0.2",
     "ngx-markdown": "^18.0.0",
     "rxjs": "~7.8.0",
