--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "concurrently": "^8.2.2",
     "copyfiles": "^2.4.1",
     "rimraf": "^6.0.1"
+  },
+  "dependencies": {
+    "github-markdown-css": "^5.6.1"
   }
 }
