--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -27,8 +27,7 @@
               }
             ],
             "styles": [
-              "src/styles.css",
-              "node_modules/github-markdown-css/github-markdown.css"
+              "src/styles.css"
             ],
             "scripts": [
             ]
